<?xml version="1.0"?>
<package format="2">
  <name>fake_laser</name>
  <version>0.0.0</version>
  <description>The fake_laser ROS package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ros_node_utils</depend>
  <depend>tf2_ros</depend>
  <depend>ros_transform_utils</depend>
  <depend>pcl_conversions</depend>
  <depend>ros_pcl_utils</depend>
  <depend>elevation_map_server</depend>

  <export>
  </export>
</package>