<?xml version="1.0"?>
<package format="2">
  <name>fake_laser</name>
  <version>0.0.0</version>
  <description>The fake_laser ROS package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>

  <export>
  </export>
</package>