<?xml version="1.0"?>
<package format="2">
  <name>fake_odom</name>
  <version>0.0.0</version>
  <description>The fake_odom ROS package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  
  <export>
  </export>
</package>